--- a/projects/Forkify/package.json
+++ b/projects/Forkify/package.json
@@ -30,6 +30,7 @@
     "@babel/polyfill": "^7.4.4",
     "axios": "^0.19.0",
     "eslint": "^5.16.0",
+    "fractional": "^1.0.0",
     "html-webpack-plugin": "^3.2.0"
   }
 }
