--- a/projects/Forkify/package.json
+++ b/projects/Forkify/package.json
@@ -31,6 +31,7 @@
     "axios": "^0.19.0",
     "eslint": "^5.16.0",
     "fractional": "^1.0.0",
-    "html-webpack-plugin": "^3.2.0"
+    "html-webpack-plugin": "^3.2.0",
+    "uniqid": "^5.0.3"
   }
 }
